Deployment/K8S/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-foyer
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: staging
spec:
  ingressClassName: external-nginx
  rules:
  - host: ons-foyer.zapto.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: front-foyer
            port: 
              number: 80
  tls:
    - hosts:
        - ons-foyer.zapto.org
      secretName: ons-foyer-zapto-org
